--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "headers": [
     {
-      "source": "/embed(.*)",
+      "source": "/(.*)",
+      "has": [{ "type": "query", "key": "embed", "value": "1" }],
       "headers": [
         {
           "key": "Content-Security-Policy",
@@ -12,14 +13,8 @@
     {
       "source": "/(.*)",
       "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self'"
-        }
+        { "key": "Content-Security-Policy", "value": "frame-ancestors 'self'" }
       ]
     }
-  ],
-  "rewrites": [
-    { "source": "/embed", "destination": "/" }
   ]
 }
