--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
   "headers": [
     {
-      "source": "/(.*)",
-      "has": [{ "type": "query", "key": "embed", "value": "1" }],
+      "source": "/embed",
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' http://localhost:3000 https://your-portfolio-domain.com https://www.your-portfolio-domain.com"
+          "value": "frame-ancestors 'self' http://localhost:3000 "
+        }
+      ]
+    },
+    {
+      "source": "/embed.html",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' http://localhost:3000"
         }
       ]
     },
